# glyphive

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASENOTES.md  THIRD_PARTY_LICENSES.md  mkdocs.yml  package.py  pyproject.toml
.github/workflows/: docs.yml  release.yml  test.yml
benchmarks/: e2e_grid.py  run.py
benchmarks/fixtures/e2e_grid_corpus/: note-001.txt  note-002.txt  note-003.txt
benchmarks/results/: FONT_CANDIDATES.md  PROVENANCE.md  README.md  SYMBOL_FONT_CANDIDATES.md  base32g-envelope-20260722.json  basemaxg-vs-base32g-gate-20260721.json  compression-candidates-20260716.json  e2e-grid-smoke-20260721.json  fontcmp-courier_tesseract.json  fontcmp-courier_tesseract_glyphive.json  fontcmp-dejavu_sans_mono_tesseract.json  fontcmp-dejavu_sans_mono_tesseract_glyphive.json  fontcmp-ocr_b_tesseract.json  fontcmp-ocr_b_tesseract_glyphive.json  fourpt-runt-line-20260721.json  glyph-drop-rates-20260721.json  glyphive-0.1.0-py39-rocky9-vm.json  kanji-channel-recovery-20260718.json  local-font-gate-base16g-20260723.json  local-font-gate-base32g-consolas-20260723.json  local-font-gate-base32g-consolas-6pt-20260723.json  local-font-gate-base32g-courier-20260723.json  local-font-gate-base32g-spotcheck-8pt-20260723.json  local-font-gate-courier-base16g-sanity-20260723.json  ocr-e2e-denser-and-4pt-20260719.json  ocr-e2e-framed-width60-20260719.json  ocr-e2e-rowsize-sweep-20260719.json  ocr-paddle370-current16.json  ocr-paddle370-ocrb6-hex16.json  ocr-paddle370-ocrb6-projectalphabet.json  ocr-paddle370-radix64-superset.json  ocr-tesseract411-current-plus5.json  ocr-tesseract411-current16.json  ocr-training-base16c-ocrb-20260718.json  ocr-training-sweep-20260718.json  page-rastered-training-20260721.json  page-rastered-training-corrected-20260721.json
benchmarks/results/font-model-sweeps/: README.md  constrained-courier-8.json  constrained-ocr-b-6.json  constrained-ocra-ttf-6.json  constrained-ocrab-ttf-6.json  font-system-OCRAII.json  font-system-ocra.json  font-system-ocrab.json  layout-courier8.json  layout-ocrb6.json  model-best-courier-8.json  model-best-ocr-b-6.json  model-fast-courier-8.json  model-fast-ocr-b-6.json  model-standard-courier-8.json  model-standard-ocr-b-6.json  ocraI-fast.json  ocraI-portable16-constrained.json  ocraIII-fast.json  ocraIII-portable16-constrained.json  ocraIV-fast.json  ocraIV-portable16-constrained.json  ocrb-sizes-tesseract411-system.json  tsukurimashou-ocrb-regular.json  tsukurimashou-ocrb-sharp.json
benchmarks/results/local-blur-stress-20260723/: results.json
benchmarks/results/local-font-sweep-20260723/: cascadia-mono_base16g.json  cascadia-mono_base32g.json  consolas_base16g.json  consolas_base32g.json  courier_base16g.json  courier_base32g.json  dejavu-sans-mono_base16g.json  dejavu-sans-mono_base32g.json  lucida-console_base16g.json  lucida-console_base32g.json  lucida-sans-typewriter_base16g.json  lucida-sans-typewriter_base32g.json  ocr-a-extended_base16g.json  ocr-a-extended_base32g.json  ocr-b_base16g.json  ocr-b_base32g.json  sweep_manifest.json
benchmarks/training/: README.md  build_and_train.sh  measure_base16c_ocrb.py  measure_sweep.py  setup_vm.sh  train_ocr_models.py
docs/: benchmarks.md  index.md
docs/api/: archive.md  codec.md  compression.md  layout.md  ocr.md  overview.md  render.md  restore.md
docs/guides/: create.md  ocr.md  restore.md  wire-format.md
examples/: create_restore.py  gallery.py
examples/gallery/: docx-consolas-10pt.docx  docx-none-compression.docx  manifest.md  text-default.txt  text-none.txt
src/glyphive/: AGENTS.md  __init__.py  __main__.py  archive.py  layout.py  plugins.py  py.typed
src/glyphive/assets/: __init__.py
src/glyphive/cli/: __init__.py  _common.py  create.py  extract.py  info.py  inspect.py  list.py  train.py
src/glyphive/codec/: __init__.py  _base.py  base16c.py  engine.py  g1.py  pagers.py  radix.py
src/glyphive/compression/: __init__.py  _base.py  gzip.py  none.py  zstd.py
src/glyphive/render/: __init__.py  _base.py
src/glyphive/restore/: __init__.py  decode.py  document_images.py  qr.py  unarchive.py
src/glyphive/training/: __init__.py  data.py  model.py  pipeline.py  runner.py  starter.py
tests/: test_archive_roundtrip.py  test_cli.py  test_codec.py  test_codec_ocr_confidence.py  test_compression.py  test_conf_calibration.py  test_document_inputs.py  test_e2e_grid_harness.py  test_ignore.py  test_layout_metadata.py  test_metadata_permissions.py  test_ocr_font_report.py  test_ocr_registry.py  test_ocr_transcripts.py  test_package.py  test_pagers.py  test_plugins.py  test_qr.py  test_renderers.py  test_streaming_archive.py  test_streaming_memory.py  test_streaming_restore.py  test_training.py
tests/fixtures/physical_scan/: MANIFEST.txt  generate.py
tools/: channel_sim.py  conf_calibration.py  document_to_images.py  ocr_font_report.py
(+15 files in other folders)
