[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glyphive"
version = "0.1.0"
authors = [{ name = "Jose A." }]
description = "Archive file trees to compact, OCR-friendly printable pages (text/PDF/docx) and restore them from scans."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["archive", "ocr", "paper-backup", "reed-solomon", "print", "backup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pathlib_next",
    "duho>=0.2.0",
    "pathspec",
    "reedsolo",
]

[project.optional-dependencies]
pdf = ["fpdf2"]
docx = ["python-docx"]
zstd = ["zstandard"]
ocr = ["Pillow", "pytesseract"]
all = ["fpdf2", "python-docx", "zstandard", "Pillow", "pytesseract"]
dev = ["build", "hatchling", "pytest", "pytest-cov", "twine"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
glyphive = "glyphive.cli:run"

[project.urls]
Homepage = "https://github.com/jose-pr/glyphive/"
Issues = "https://github.com/jose-pr/glyphive/issues"
Repository = "https://github.com/jose-pr/glyphive"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/benchmarks", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/glyphive"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
