[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glyphive"
version = "0.3.0"
authors = [{ name = "Jose A." }]
description = "Archive file trees to compact, OCR-friendly printable pages (text/PDF/docx) and restore them from scans."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = [
    "LICENSE",
    "src/glyphive/assets/fonts/ocr_b/LICENSE.md",
    "src/glyphive/assets/fonts/dejavu_sans_mono/LICENSE",
]
keywords = ["archive", "ocr", "paper-backup", "reed-solomon", "print", "backup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pathlib_next>=0.8.1",
    "duho>=0.2.0",
    "pathspec",
    "reedsolo",
]

[project.optional-dependencies]
pdf = ["fpdf2"]
docx = ["python-docx"]
zstd = ["zstandard"]
ocr = ["Pillow", "pytesseract"]
document-input = ["Pillow", "pypdfium2", "python-docx"]
qr = [
    "segno==1.6.6",
    "zxing-cpp==2.3.0; python_version < '3.10'",
    "zxing-cpp==3.1.0; python_version >= '3.10'",
    "Pillow",
]
all = [
    "fpdf2",
    "python-docx",
    "zstandard",
    "Pillow",
    "pypdfium2",
    "pytesseract",
    "segno==1.6.6",
    "zxing-cpp==2.3.0; python_version < '3.10'",
    "zxing-cpp==3.1.0; python_version >= '3.10'",
]
dev = ["build", "hatchling", "pytest", "pytest-cov", "twine"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
glyphive = "glyphive.cli:run"

[project.urls]
Homepage = "https://github.com/jose-pr/glyphive/"
Documentation = "https://jose-pr.github.io/glyphive/"
Issues = "https://github.com/jose-pr/glyphive/issues"
Repository = "https://github.com/jose-pr/glyphive"


# Ship the consumer-facing docs inside the installed package, so they are
# readable from site-packages via importlib.resources without the repo.
# src/glyphive/AGENTS.md is included automatically by living in the package
# dir; the repo-root AGENTS.md is development-only and deliberately not
# shipped.
[tool.hatch.build.targets.wheel.force-include]
"README.md" = "glyphive/README.md"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/benchmarks", "/packages"]

[tool.hatch.build.targets.wheel]
packages = ["src/glyphive"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
